Show error stream when running external processes (so that standard error buffers don't fill up).